--- a/src/sustainability/Link2.form
+++ b/src/sustainability/Link2.form
@@ -3,10 +3,12 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Ocean Cleanup Info | Harry"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -60,16 +62,11 @@
                                   <Component id="textfield3TF" alignment="0" pref="185" max="32767" attributes="0"/>
                                   <Component id="textfield2TF" alignment="0" max="32767" attributes="0"/>
                                   <Group type="102" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" attributes="0">
-                                              <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
-                                              <Component id="label1LBL" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Component id="Labe2LBL" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="label4LBL" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+                                      <Component id="label1LBL" min="-2" max="-2" attributes="0"/>
                                   </Group>
+                                  <Component id="Labe2LBL" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="label4LBL" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Component id="textfield1TF" alignment="1" min="-2" pref="183" max="-2" attributes="0"/>
                           </Group>
