--- a/src/sustainability/Link3.form
+++ b/src/sustainability/Link3.form
@@ -66,7 +66,7 @@
                               <Group type="102" attributes="0">
                                   <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="celanUpPartnerTF" alignment="0" pref="150" max="32767" attributes="0"/>
+                                      <Component id="cleanUpPartnerTF" alignment="0" pref="150" max="32767" attributes="0"/>
                                       <Component id="typeOfDebrisTF" alignment="0" max="32767" attributes="0"/>
                                       <Component id="amountDumpedTF" alignment="0" max="32767" attributes="0"/>
                                       <Component id="locationTF" alignment="0" max="32767" attributes="0"/>
@@ -135,7 +135,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="cleanUpPartnerLBL" min="-2" max="-2" attributes="0"/>
-                      <Component id="celanUpPartnerTF" min="-2" max="-2" attributes="0"/>
+                      <Component id="cleanUpPartnerTF" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -277,9 +277,9 @@
         </Component>
         <Component class="javax.swing.JTextField" name="typeOfDebrisTF">
         </Component>
-        <Component class="javax.swing.JTextField" name="celanUpPartnerTF">
+        <Component class="javax.swing.JTextField" name="cleanUpPartnerTF">
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="celanUpPartnerTFActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cleanUpPartnerTFActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="addBTN">
@@ -292,6 +292,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Add"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addBTNActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="viewBTN">
           <Properties>
@@ -303,6 +306,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="View"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="viewBTNActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="deleteBTN">
           <Properties>
@@ -314,6 +320,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Delete"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deleteBTNActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
           <AuxValues>
